--- a/src/components/Campaign/CampaignDashboard.css
+++ b/src/components/Campaign/CampaignDashboard.css
@@ -21,7 +21,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  opacity: 0.3;
+  opacity: 0.15;
   z-index: 0;
 }
 
